# stk

./: .gitignore  Cargo.toml  LICENSE.txt
data/: All.tar.Z
data/Miscellaneous/: Makefile
data/PRISM_1.0/: Makefile  prism_2.2_1.rdf  prism_2.3_1.rdf  prism_2.4.2_1.rdf  prism_2.7.1_1.rdf  prism_2.7.2_1.rdf  prism_2.7.3_1.rdf  prism_2.7.3_2.rdf  prism_2.7.4_1.rdf  prism_2.7.4_2.rdf  prism_2.7.5_1.rdf  prism_4.8.5_1.rdf  prism_4.8.5_2.rdf
data/RDF-Model-Syntax_1.0/: Makefile
data/RDFS-CR-27-Mar-2000/: Makefile  rdfs_2.3.2.1_1.rdf  rdfs_3.2_1.rdf  rdfs_7.1_1.rdf  rdfs_7.2_1.rdf  rdfs_app_a_1.rdf
data/RSS_1.0/: Makefile
data/SiRPAC-bugs/: APR-16-2001-1.rdf  APR-25-2001-1.rdf  DEC-05-2000-1.rdf  DEC-06-2000-1.rdf  DEC-06-2000-2.rdf  DEC-08-2000-1.rdf  DEC-11-2000-1.rdf  DEC-11-2000-2.rdf  DEC-15-2000-1.rdf  FEB-02-2001-1.rdf  FEB-02-2001-2.rdf  FEB-03-2001-1.rdf  FEB-15-2001-1.rdf  FEB-21-2001-1.rdf  FEB-21-2001-2.rdf  FEB-21-2001-3.rdf  FEB-21-2001-4.rdf  FEB-21-2001-5.rdf  FEB-21-2001-6.rdf  FEB-21-2001-7.rdf  FEB-27-2001-1.rdf  FEB-28-2001-1.rdf  JAN-03-2001-1.rdf  JAN-05-2001-1.rdf  JAN-11-2001-1.rdf  JAN-15-2001-1.rdf  JAN-18-2001-1.rdf  JAN-19-2001-1.rdf  JAN-25-2001-1.rdf  JUN-04-2001-1.rdf  JUN-11-2001-1.rdf  MAR-20-2001-1.rdf  MAR-20-2001-2.rdf  MAR-28-2001-1.rdf  MAY-15-2001-1.rdf  MAY-15-2001-2.rdf  MAY-21-2001-1.rdf  Makefile  NOV-01-2000-1.rdf  NOV-15-2000-1.rdf  (+3 more)
src/: #main.rs#  .#main.rs
src/rdf/: #mod.rs#  mod.rs
